--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 		<div id="main">
 			<h2>NickName</h2>
-			<div id="input"><input placeholder="NickName" type="text" /></div>
-			<button type="submit">Ok</button>
+			<div id="input"><input placeholder="NickName" type="text"/></div>
+			<button type="submit" href="./chat.html">OK</button>
 		</div>
 
 
@@ -103,6 +103,7 @@
 			margin: 8px auto;
 			float:right;
 			margin-right:25%;
+			font-size: 20;
 		}
 
 		</style>
